--- a/Esterni/Manuale_utente/Manuale_utente_0_0_1.tex
+++ b/Esterni/Manuale_utente/Manuale_utente_0_0_1.tex
@@ -71,7 +71,7 @@ Di seguito descriviamo come utilizzare \proj{} per progettare e generare un'appl
 
 \subsection{Interfaccia grafica} \label{sec:gui}
 
-Potete accedere a \proj{} dall'indirizzo \url{\webroot}. Vi viene subito presentato un diagramma delle classi vuoto, sul quale potete iniziare un nuovo progetto. Ai lati e in alto sono presenti delle barre con dei menù, mentre al centro vi è l'area di lavoro.
+Vi viene subito presentato un diagramma delle classi vuoto, sul quale potete iniziare un nuovo progetto. Ai lati e in alto sono presenti delle barre con dei menù, mentre al centro vi è l'area di lavoro.
 
 
 
@@ -216,7 +216,7 @@ In particolare, possibili cause di malfunzionamento della vostra applicazione po
 
 \subsection{Accesso all'applicazione non possibile}
 
-Può capitare (raramente) che non si riesca ad accedere all'indirizzo \url{\webroot}. In tal caso potete recarvi all'indirizzo \url{http://www.downforeveryoneorjustme.com} per verificare se il problema è relativo al vostro provider o al nostro server.
+Nel caso non riusciate ad accedere al nostro server, potete recarvi all'indirizzo \url{http://www.downforeveryoneorjustme.com} per verificare se il problema è relativo al vostro provider o al nostro server.
 
 
 
