--- a/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
+++ b/Interni/Norme_di_progetto/Norme_di_progetto_2_0_0.tex
@@ -311,7 +311,7 @@ Al fine di aumentare la manutenibilità del sistema, i progettisti devono seguir
 \end{itemize}
 Il programmatore è tenuto ad accettare la formattazione automatica proposta dall'editor.
 
-\paragraph{Integrazione del codice} \label{sec:integraz} I programmatori devono caricare il codice sorgente nel repository pubblico \url{https://github.com/hivex-unipd/swedesigner}. Ogni \emph{commit} deve recare un messaggio che spieghi concisamente le aggiunte o modifiche che sono state apportate al codice. Gli amministratori hanno configurato un sistema di integrazione continua con \emph{Travis CI}; ogni commit scatena una \emph{build} del codice esistente da parte di \emph{Travis CI}; questo comunica il risultato della \emph{build} sul canale \texttt{\#github} di Slack (vedi \S\ref{sec:canali}). Nel caso la \emph{build} rilevi dei guasti nel codice, i programmatori devono correggere i guasti; nel caso venga invece rilevato un malfunzionamento di altro tipo, gli amministratori devono intervenire nella configurazione del repository.
+\paragraph{Integrazione del codice} \label{sec:integraz} I programmatori devono caricare il codice sorgente nel repository pubblico \url{https://github.com/hivex-unipd/swedesigner}. Ogni \emph{commit} deve recare un messaggio che spieghi concisamente le aggiunte o modifiche che sono state apportate al codice. Gli amministratori hanno configurato un sistema di integrazione continua con \emph{Travis CI}; ogni commit scatena una \emph{build} del codice esistente da parte di \emph{Travis CI}; questo comunica il risultato della \emph{build} sul canale \texttt{\#github} di Slack (vedi §\ref{sec:canali}). Nel caso la \emph{build} rilevi dei guasti nel codice, i programmatori devono correggere i guasti; nel caso venga invece rilevato un malfunzionamento di altro tipo, gli amministratori devono intervenire nella configurazione del repository.
 
 
 
