sistemata Adr e relativo Diario

--- a/Esterni/Analisi_dei_requisiti/diario.tex
+++ b/Esterni/Analisi_dei_requisiti/diario.tex
@@ -2,6 +2,16 @@
 % da includere con \include{diario}
 
 \begin{diario}
+	3.0.0 & {\AZ} (Responsabile) & 19/03/2017 & Approvazione del documento \\ \hline
+	2.1.0 & {\MM} (Verificatore) & 19/03/2017 & Verifica del documento \\ \hline
+	2.0.3 & {\PB} (Progettista) & 18/03/2017 &  
+\begin{itemize}
+	\item Modifica tabella Tracciamento Fonti-Requisiti;
+	\item Modifica tabella Requisiti-Fonti;
+	\item Modifica Estensione UC7.
+\end{itemize}\\ \hline
+	2.0.2 & {\PB} (Progettista) & 17/03/2017 &  Ristrutturato UC5 e relativi requisiti\\ \hline
+	2.0.1 & {\PB} (Progettista) & 16/03/2017 &  Ristrutturato UC4 e relativi requisiti\\ \hline
 	2.0.0 & {\LS} (Responsabile) & 01/02/2017 & Approvazione del documento \\ \hline
 	1.1.0 & {\GG} (Verificatore) & 01/02/2017 & Verifica del documento \\ \hline
 	1.0.4 & {\AZ} (Analista) & 31/01/2017 & Inserito UC5.26 con relativo requisito e tracciamento nelle tabelle e inseriti i requisiti RFO7, RFO8, RFO8.1, RFO8.2, RFO9, RFO10 e RFO11\\ \hline
