--- a/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_2_0_0.tex
+++ b/Esterni/Analisi_dei_requisiti/Analisi_dei_requisiti_2_0_0.tex
@@ -3,7 +3,7 @@
 
 \input{../../util/hx-ambiente}
 
-\version{2.0.0}
+\version{3.0.0}
 \creaz{19 dicembre 2016}
 \author{\AZ}
 \supervisor{\GG}
@@ -2017,18 +2017,13 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 	\item \textbf{Precondizione}: l'utente ha selezionato il comando di salvataggio e il sistema visualizza il relativo form;
 	\item \textbf{Postcondizione}: il file viene salvato secondo le specifiche indicate dall'utente;
 	\item \textbf{Scenario principale}: l'attore conferma il salvataggio del progetto corrente.
-	\item \textbf{Estensioni}: l'attore visualizza un messaggio d'errore sull'inserimento dei dati;
-	\item \textbf{Scenari alternativi}:
-		\begin{itemize}
-		\item l'attore non inserisce il nome del file;
-		\item l'attore non specifica un percorso di directory valido.
-	\end{itemize}
+	\item \textbf{Estensioni}: l'attore visualizza un messaggio d'errore sull'inserimento dei dati.
 \end{itemize}
 
 \paragraph{UC6.3.1 Visualizzazione Errore Salvataggio File}
 \begin{itemize}
 	\item \textbf{Attori}: Utente;
-	\item \textbf{Descrizione}: l'attore può visualizzare un messaggio d'errore in corrispondenza della conferma di salvataggio nel caso si siano verificati uno o più scenari alternativi durante la fase di inserimento dei dati di salvataggio;
+	\item \textbf{Descrizione}: l'attore può visualizzare un messaggio d'errore in corrispondenza della conferma di salvataggio nel caso in cui l'attore non inserisce il nome del file o non specifica un percorso di directory valido;
 	\item \textbf{Precondizione}: il sistema non ha ricevuto sufficienti informazioni per il salvataggio del progetto;
 	\item \textbf{Postcondizione}: il sistema avvisa l'attore dell'errore verificatosi, tramite un opportuno messaggio;
 	\item \textbf{Scenario principale}: l'attore visualizza un messaggio d'errore.
@@ -2042,20 +2037,14 @@ Si noti che, per esigenze tipografiche, è possibile che certe figure siano stat
 	\item \textbf{Precondizione}: il diagramma delle classi è completo e per ogni metodo è disponibile un diagramma delle attività corretto;
 	\item \textbf{Postcondizione}: il sistema visualizza la cartella compressa scaricata dall'utente;
 	\item \textbf{Scenario principale}: l'attore scarica la cartella compressa contenente tre file quali l'applicativo, i diagrammi da lui realizzati ed il codice sorgente;
-	\item \textbf{Estensioni}: l'attore visualizza un messaggio d'errore relativo ai diagrammi realizzati (UC7.1);
-	\item \textbf{Scenari alternativi}:
-	\begin{itemize}
-	  \item l'attore ha fornito dei diagrammi non validi (e.g. corrotti);
-		\item l'attore ha indicato del codice non compilabile (e.g. codice inserito in un blocco custom);
-		\item l'attore non ha rispettato i vincoli imposti dagli stereotipi scelti.
-	\end{itemize}
+	\item \textbf{Estensioni}: l'attore visualizza un messaggio d'errore relativo ai diagrammi realizzati (UC7.1); 
 \end{itemize}
 
 \subsubsection{UC7.1: Visualizzazione Errore Generazione Codice}
 \label{UC7.1}
 \begin{itemize}
 	\item \textbf{Attori}: Utente;
-	\item \textbf{Descrizione}: l'attore può visualizzare un messaggio d'errore in corrispondenza della richiesta di generazione codice nel caso si siano verificati uno o più scenari alternativi durante la fase di creazione dei diagrammi delle classi e delle attività;
+	\item \textbf{Descrizione}: l'attore può visualizzare un messaggio d'errore in corrispondenza della richiesta di generazione codice nel caso in cui l'attore fornisce dei diagrammi non validi (e.g. corrotti), indica del codice non compilabile (e.g. codice inserito in un blocco custom)o non rispetta i vincoli imposti dagli stereotipi scelti;
 	\item \textbf{Precondizione}: i diagrammi realizzati dall'utente non sono validi o presentano errori di compilazione;%non sono coerenti con i vincoli imposti dal sistema di stereotipi già presente nell'applicazione;
 	\item \textbf{Postcondizione}: il sistema avvisa l'attore dell'errore verificatosi, tramite un opportuno messaggio;
 	\item \textbf{Scenario principale}: l'attore visualizza un messaggio d'errore.
