--- a/Esterni/Specifica_tecnica/tex/arch.tex
+++ b/Esterni/Specifica_tecnica/tex/arch.tex
@@ -101,7 +101,7 @@ Il \emph{back end} della nostra applicazione \`e un server Tomcat che esegue un'
 \begin{itemize}
 	\item il capitolato non richiedeva che la nostra applicazione avesse un'architettura distribuita;
 	\item il capitolato richiedeva la codifica del \emph{back end} in Java, la cui natura ad oggetti ci ha spinti a vedere sin da subito il \emph{back end} come un classico sistema gerarchico monolitico;
-	\item un server monolitico era la scelta pi\`u semplice che si potesse prendere.
+	\item la struttura più essenziale di un server monolitico ha permesso di ridirigere parte delle risorse nello sviluppo di parti più interessanti per il committente.
 \end{itemize}
 
 Punti a sfavore delle architetture monolitiche sono i seguenti:
