--- a/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_0.tex
+++ b/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_0.tex
@@ -1,11 +1,11 @@
-% piano di Progetto
-% da compilare con il comando pdflatex Esterni/Piano_di_progetto/Piano_di_progetto_v_x.x.x.tex
+% Piano di Progetto
+% da compilare con il comando pdflatex Piano_di_progetto_x.x.x.tex
 
 \input{../../util/hx-ambiente}
 \version{2.0.0}
 \creaz{25 dicembre 2016}
-\author{\GG, \LS}
-\supervisor{\LB}
+\author{\LB, \MM}
+\supervisor{\AZ}
 \uso{esterno}
 \dest{\TV, \ZU}
 \title{Piano di Progetto}
