--- a/util/hx-vers.sty
+++ b/util/hx-vers.sty
@@ -3,7 +3,7 @@
 % da aggiornare con il comando ./vers.py dalla directory util
 
 \newcommand{\AdR}{\emph{\mbox{Analisi\_dei\_requisiti\_2\_0\_0.pdf}}}
-\newcommand{\DdP}{\emph{\mbox{Definizione\_di\_prodotto\_1\_0\_0.pdf}}}
+\newcommand{\DP}{\emph{\mbox{Definizione\_di\_prodotto\_1\_0\_0.pdf}}}
 \newcommand{\Glossario}{\emph{\mbox{Glossario\_2\_0\_0.pdf}}}
 \newcommand{\MU}{\emph{\mbox{Manuale\_utente\_0\_0\_1.pdf}}}
 \newcommand{\PdP}{\emph{\mbox{Piano\_di\_progetto\_2\_0\_0.pdf}}}
