--- a/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_0.tex
+++ b/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_0.tex
@@ -1512,11 +1512,11 @@ Le ore dedicate al task \emph{Incremento Piano di Qualifica [RP]} sono variate, 
     \LB & 0 & 3 & 0 & 38 & 0 & 1 & 42 \\ \hline
     \GG & 3 & 0 & 0 & 35 & 0 & 1 & 39 \\ \hline
     \MM & 0 & 0 & 0 & 39 (-3) & 0 & 7 (+3) & 46 \\ \hline
-    \LS & 2 & 0 & 0 & 28 (-8) & 0 & 16 (+10) & 44 (+2) \\ \hline
-    \AZ & 0 & 0 & 0 & 31 (-8) & 0 & 14 (+10) & 35 (+2) \\ \hline
+    \LS & 2 & 0 & 0 & 28 (-8) & 0 & 16 (+10) & 46 (+2) \\ \hline
+    \AZ & 0 & 0 & 0 & 23 (-8) & 0 & 14 (+10) & 37 (+2) \\ \hline
     \rowcolor[gray]{.9}
 
-    Totale ore/ruolo & 5 & 3 & 0 & 189 (-19) & 0 & 45 (+23) & 238 (+4) \\ \hline
+    Totale ore/ruolo & 5 & 3 & 0 & 189 (-19) & 0 & 45 (+23) & 242 (+4) \\ \hline
     
   \end{tabular}
 }
@@ -1618,6 +1618,7 @@ Tale rallentamento ha portato ad uno slittamento delle attività di codifica par
 \item poco adattabile alle esigenze delle revisioni di progetto: normalmente, collocare più di una attività di incremento all'interno di un unico periodo tra una revisione di progetto e l'altra risulta inutilmente dispersivo;
 \item difficile da conciliare con le risorse rimanenti a disposizione.
 \end{itemize}
+
 Il gap di una settimana pianificato dal 10-04-2017 al 17-04-2017 è stato previsto per permettere al team di svolgere altre attività di carattere accademico non inerenti al progetto.
 
 \begin{figure}[H]
@@ -1632,6 +1633,7 @@ Sono state ridotte le attività e le ore previste per la stesura della Definizio
 
 \begin{itemize}
 \item Ridistribuire le ore alle attività che ne necessitavano (future attività di codifica e verifica);
+\item Riassegnare il carico di lavoro rendicontabile bilanciandolo più nella \VV: questo non perché il team abbia lavorato in meno rispetto alle aspettative, ma perché le attività non rendicontabili hanno preso più tempo di quanto preventivato.
 \end{itemize}
 
 
@@ -1657,15 +1659,15 @@ Sono state ridotte le attività e le ore previste per la stesura della Definizio
     \hline
     \rowcolor[gray]{.9}
     Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot ore/persona \\ \hline
-    \PB & 0 & 0 & 0 & 18 & 30 & 7 & 55 \\ \hline
-    \LB & 0 & 5 & 0 & 8 & 30 & 13 & 56 \\ \hline
-    \GG & 0 & 5 & 0 & 10 & 30 & 3 & 48 \\ \hline
-    \MM & 2 & 0 & 0 & 0 & 30 & 8 & 40 \\ \hline
-    \LS & 0 & 3 & 0 & 10 & 30 & 9 & 52 \\ \hline
-    \AZ & 2 & 5 & 0 & 10 & 30 & 10 & 57 \\ \hline
+    \PB & 0 & 0 & 0 & 0 (-18) & 27 (-3) & 7 & 34 (-21) \\ \hline
+    \LB & 0 & 5 & 0 & 0 (-8) & 27 (-3) & 11 (-2) & 43 (-13) \\ \hline
+    \GG & 0 & 5 & 0 & 0 (-10) & 27 (-3) & 3 & 35 (-13) \\ \hline
+    \MM & 2 & 0 & 0 & 0 & 27 (-3) & 4 (-4) & 33 (-7) \\ \hline
+    \LS & 0 & 3 & 0 & 0 (-10) & 27 (-3) & 3 (-6) & 33 (-19) \\ \hline
+    \AZ & 2 & 5 & 0 & 0 (-10) & 27 (-3) & 4 (-6) & 38 (-19) \\ \hline
     \rowcolor[gray]{.9}
 
-    Totale ore/ruolo & 4 & 18 & 0 & 56 & 180 & 50 & 308 \\ \hline
+    Totale ore/ruolo & 4 & 18 & 0 & 0 (-56) & 162 (-18) & 32 (-18) & 216 (-92) \\ \hline
     
   \end{tabular}
   }
@@ -1685,15 +1687,15 @@ Sono state ridotte le attività e le ore previste per la stesura della Definizio
     \hline
     \rowcolor[gray]{.9}
     Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot euro/persona \\ \hline
-    \PB & 0 & 0 & 0 & 396 & 450 & 105 & 951 \\ \hline
-    \LB & 0 & 100 & 0 & 176 & 450 & 195 & 921 \\ \hline
-    \GG & 0 & 100 & 0 & 220 & 450 & 45 & 815 \\ \hline
-    \MM & 60 & 0 & 0 & 0 & 450 & 120 & 630 \\ \hline
-    \LS & 0 & 60 & 0 & 220 & 450 & 135 & 865 \\ \hline
-    \AZ & 60 & 100 & 0 & 220 & 450 & 150 & 980 \\ \hline
+    \PB & 0 & 0 & 0 & 0 (-396) & 450 (-45) & 105 & 510 (-441) \\ \hline
+    \LB & 0 & 100 & 0 & 0 (-176) & 450 (-45) & 165 (-30) & 670 (-251) \\ \hline
+    \GG & 0 & 100 & 0 & 0 (-220) & 450 (-45) & 45 & 550 (-301) \\ \hline
+    \MM & 60 & 0 & 0 & 0 & 450 (-45) & 60 (-60) & 525 (-105) \\ \hline
+    \LS & 0 & 60 & 0 & 220 & 0 (-450) & 45 (-90) & 510 (-355) \\ \hline
+    \AZ & 60 & 100 & 0 & 220 & 0 (-450) & 60 (-90) & 625 (-355) \\ \hline
     \rowcolor[gray]{.9}
 
-    Totale euro/ruolo & 120 & 360 & 0 & 1232 & 2700 & 750 & 5162 \\ \hline
+    Totale euro/ruolo & 120 & 360 & 0 & 0 (-1232) & 2430 (-270) & 480 (-2707) & 3390 (-1772) \\ \hline
   \end{tabular}
   
 }\label{tab:cpdc}
