--- a/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_0.tex
+++ b/Esterni/Piano_di_progetto/Piano_di_progetto_2_0_0.tex
@@ -1189,6 +1189,44 @@ Il costo totale del progetto \proj{} preventivato è arrotondato a \textbf{11700
 
 
 
+\subsection{Ore non rendicontabili successive all'aggiudicazione dell'appalto}
+Di seguito si riporta la divisione oraria pianificata generale delle ore non rendicontate a partire dalla \ARI, ovvero dalla aggiudicazione dell'appalto. Essa viene confrontata con il totale di ore rendicontate del progetto.
+Il totale risultante \textbf{non è a carico del cliente}. Viene fornito a scopo informativo.
+
+
+\begin{figure}[H]
+\definecolor{white2}{rgb}{0.95,0.95,0.95}
+\definecolor{white3}{rgb}{0.9,0.9,0.9}
+%\rowcolors{1}{white}{white2}
+
+\makebox[\textwidth][c]
+{
+  \begin{tabular}[width=1.2\textwidth]{ | l | c | c | c | c | c | c | r |}
+    \hline
+    \rowcolor[gray]{.9}
+    Ruolo / persona & \R & \AM & \AN & \PJ & \PG & \V & Tot ore/persona \\ \hline
+    \PB & 3/6 & 8/16 & 0 & 44/88 & 30/60 & 18/36 & 103/206 \\ \hline
+    \LB & 3/9 & 8/16 & 0 & 46/92 & 30/60 & 16/32 & 103/209 \\ \hline
+    \GG & 3/6 & 5/15 & 0 & 45/90 & 30/60 & 20/40 & 103/211 \\ \hline
+    \MM & 2/4 & 0/10 & 2 & 42/84 & 30/60 & 27/54 & 103/214 \\ \hline
+    \LS & 2/4 & 3/6 & 5 & 46/92 & 30/60 & 17/34 & 103/201 \\ \hline
+    \AZ & 2/4 & 5/10 & 8 & 41/82 & 30/60 & 17/34 & 103/198 \\ \hline
+    \rowcolor[gray]{.9}
+
+    Totale ore/ruolo & 15/33 & 29/78 & 15/0 & 264/518 & 180/360 & 125/250 & 618/1239 \\ \hline
+    
+  \end{tabular}
+  }
+  
+  \label{tab:rend}
+
+  \caption{Tabella ore rendicontate/ore non rendicontate da \ARI, per ruolo e per persona.}
+\end{figure} 
+
+
+% boh dite voi io ho sparato numeri a caso
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 %%  Consuntivo di periodo
@@ -1704,7 +1742,7 @@ Sono state ridotte le attività e le ore previste per la stesura della Definizio
 \end{figure}
 
 
-
+%%%% DA FARE ANCORA (so' stanco)
 \begin{figure}[H]
 \makebox[\textwidth][c]
 {
@@ -1726,15 +1764,30 @@ Sono state ridotte le attività e le ore previste per la stesura della Definizio
   \end{tabular}
   
 }
+
 \label{tab:car}
 \caption{Differenza preventivo-consuntivo per ruolo, \PA. Colonna \emph{Costo} in euro (\euro).}
 \end{figure}
 
 \subsubsection{Considerazioni}
-A fronte delle necessarie correzioni al \PdQ{} non previste è stato necessario rivedere la pianificazione, sottraendo risorse alla progettazione e assegnandole alla verifica. Questo ha portato ad una variazione totale delle ore/persona del gruppo ma è sempre stato rispettato il vincolo delle 105 ore rendicontabili. 
+A fronte della scelta presa di riequilibrare il carico, si presenta successivamente il nuovo preventivo a finire.
+% dobbiamo fare ancora i test 
+% dobbiamo codificare ancora varie cose
+
+
+\subsubsection{Nuova pianificazione}
+Si riporta la nuova pianificazione del periodo \VV{}.
+%2 tabelle, grafici
 
 \subsubsection{Preventivo a finire}
-Il consuntivo presenta una differenza di costo negativa a causa del costo diverso delle due diverse mansioni. Queste risorse risparmiate in questa fase saranno investite successivamente qualora necessario al fine di migliorare ulteriormente le attività di verifica, prevedendo l'assegnazione di più ore alla attività di verifica. L'effettiva variazione delle ore assegnate sarà presentata nei prossimi consuntivi di periodo.
+Si riporta il nuovo preventivo a finire.
+%grafici del rendicontabili e tabelle varie, far vedere come sono cambiati i costi
+
+
+
+
+
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
