--- a/Esterni/Specifica_tecnica/tex/arch.tex
+++ b/Esterni/Specifica_tecnica/tex/arch.tex
@@ -118,7 +118,7 @@ Si è tentato di arginare il problema come segue:
 \item sono stati studiati svariati strumenti e metriche al fine di misurare la qualità complessiva del codice di backend prodotto (vedi \emph{Piano di Qualifica} e \emph{Norme di Progetto}).
 \end{itemize}
 
-
+% è opportuno?
 
 Il server offre tre servizi:
 \begin{enumerate}
